--- a/assignments/lesson-7/styles/medium.css
+++ b/assignments/lesson-7/styles/medium.css
@@ -23,15 +23,13 @@
         display: inline-flex;
     }
     
-    ul li {
-    }
 
     nav ul li a {
         font-size: 1.2rem;
     }
     
     a:hover, a:visited, a:active, a {
-        color: #fc9928;
+        color: rgb(146, 239, 255);
         text-decoration: none;
         list-style-type: none;
     }
@@ -51,8 +49,6 @@
     
     .current { 
         text-align: center;
-    }
-    .highlow {
     }
     .highlow p{
         text-align: center;
@@ -85,7 +81,7 @@
     .forecast table {
         width: 100%;
         background-color: #000c26;
-        color: #fc9928;
+        color: #fff;
         justify-content: center;
     }
     .forecast table thead tr th {
@@ -103,9 +99,7 @@
         padding: 0;
         margin: 0;
     }
-    .town-article p {
 
-    }
     .town-article p img {
         width: 100%;
         padding: 0;
