--- a/assignments/lesson-8/styles/main.css
+++ b/assignments/lesson-8/styles/main.css
@@ -3,35 +3,23 @@
 * { box-sizing: border-box;}  /* This wildcard applies to all elements ensuring a box layout model */
 
 body {
-    display: flex;
-    min-height: 100vh; 
-    flex-direction: column;
-    font-size: 16px;
-    font-family: "Roboto Condensed", sans-serif;
+  font-size: 16px;
+  font-family: "Roboto Condensed", sans-serif;
 }
 
-header, nav, main, footer {
-}
 header {
-    margin-left: 10px;
-    display: flex;
-    width: 95%;
-    overflow: hidden;
-}
-header img {
-    display: inline-flex;
-    margin-top: 5px;
-    height: 15vw;
-}
-header div {
-    flex-grow: 1;
-    
+    margin-left: 50px;
 }
 header h1 {
     font-size: 1.9rem;
     color: #044068;
     margin-top: 0;
     padding-top: 0;
+}
+header img {
+    display: inline-flex;
+    margin-top: 5px;
+   width: 30%;
 }
 header .subheading {
     font-size: 1.1rem;
@@ -46,7 +34,7 @@ nav {
     align-items: flex-start;
     flex-shrink: 0;
     width: 100%;
-    background-color: #000c26;
+    background-color: #3A8BC2;
     margin-bottom: 10px;
     overflow:auto;
 }
@@ -62,30 +50,27 @@ nav ul.hide {
     display: none;
 }
 
-nav ul li {
-}
 
 nav ul li a {
     display: inline-flex;
-    background-color: #000c26;
-    color: #fc9928;
+    background-color: #3A8BC2;
+    color: #ffffff;
     text-decoration: none;
     font-size: 3.0vw;
     padding: 10px;
     width: 100%;
 }
 nav ul li.active a {
-    color: goldenrod;
+    color: rgb(146, 239, 255);
 }
 nav ul li a:checked, nav ul li a:visited {
-    color: #fc9928;
+    color: #ffffff;
 }
 nav ul li a:hover {
     background-color: #021847;
-    color: #fc9928;
+    color: rgb(146, 239, 255);
 }
 
-main {flex: 1;}
 main h2 {
     font-size: 1.5rem;
     text-align: center;
@@ -138,8 +123,7 @@ main figure img { width: 100%; }
     width: 100%;
     justify-content: space-around;
 }
-.highlow p{
-}
+
 .conditions {
     display: flex;
     flex-direction: column;
@@ -176,17 +160,13 @@ footer {
     display: inline-flex;
     flex-direction: column;
     background-color: #000c26;
-    color: #fc9928;
+    color: #3A8BC2;
     width: 100%;
     text-align: center;
     justify-content: center;
     font-size: .7rem;
     padding-top: 5px;
-    margin-top: auto;
-    flex-shrink: 0;
 }
-footer aside {}
-footer>p {}
 
 /* Gallery Specifics */
 #gallery {
@@ -199,82 +179,10 @@ footer>p {}
     display: grid;
     grid-gap: 7px;
 }
-#gallery figure img {
-}
+
 #gallery figure figcaption {
     text-align: center; 
 }
 #gallery figure a {
-    color: #6d39ba;
+    color: #1b3886;
 }
-
-/* Storm Center Specifics */
-#strm-cntr {
-    border: 2px solid #000;
-    margin-bottom: .5em;
-    overflow: hidden;
-}
-#strm-cntr h1 {
-    text-align: center;
-    color: #fc6a02;
-}
-
-#strm-cntr form fieldset {
-    background-color: #02385b;   
-}
-
-#strm-cntr form legend {
-    font-size: 1.3rem;
-    color: #fff;
-    padding: .3em;
-    background-color: #00183f;
-}
-
-#strm-cntr .strm-svr {
-    display: flex;
-    vertical-align: middle;
-    align-content: center;
-    align-items: center;
-    margin-top: 1em;
-}
-#strm-cntr .strm-svr span {
-    margin: 5px;
-}
-
-#strm-cntr form label span {
-    display: flex;
-    color: #fff;
-    font-size: 1.2rem;
-    margin-top: 1em;
-}
-#strm-cntr .radio{
-    color: #fff;
-}
-
-#strm-cntr form input.submitbutton {
-    width: 120px;
-    height: 35px;
-    background-color: #fc9928;
-}
-
-#strm-cntr form textarea {
-    width: 100% ;   
-}
-
-/* Thanks Page Specifics*/
-#thankyou h1 {
-    font-size: 1.5rem;
-    text-align: center;
-}
-
-#thankyou h2 {
-    font-size: 1.2rem;
-    text-align: center;
-}
-
-#thankyou h3 {
-    font-size: 1rem;
-    text-align: center;
-}
-
-
